# game-dev

./: CMakeLists.txt
assets/maps/: lvl1.map
src/: main.cpp
src/game/: game.cpp  game.hpp
src/game/ECS/: ECS.cpp  ECS.hpp
src/game/collision/: collision.cpp  collision.hpp
src/game/components/: animation.hpp  components.hpp  tile_component.hpp
src/game/components/colliderComponent/: collider_component.cpp  collider_component.hpp
src/game/components/followDelayComponent/: follow_delay_component.cpp  follow_delay_component.hpp
src/game/components/keyboardComponent/: keyboard_controller.cpp  keyboard_controller.hpp
src/game/components/spriteComponent/: sprite_component.cpp  sprite_component.hpp
src/game/components/tileComponent/: tile_component.cpp  tile_component.hpp
src/game/components/transformComponent/: transform_component.cpp  transform_component.hpp
src/game/entityComponentSystem/: ECS.hpp
src/game/gameObject/: game_object.cpp  game_object.hpp
src/game/map/: map.cpp  map.hpp
src/game/vector2d/: vector_2d.cpp  vector_2d.hpp
src/gameObject/: game_object.cpp  game_object.hpp
src/textureManager/: texture_manager.cpp  texture_manager.hpp
src/utility/: utility.cpp  utility.hpp
